Updated QueryClientHandler and otehr Query files with Cache Management