@@ -1,9 +1,10 @@
-package java.com.fspann;
+package com.fspann;
 
-import java.com.fspann.keymanagement.KeyManager;
-import java.com.fspann.index.SecureLSHIndex;
-import java.com.fspann.query.EncryptedPoint;
-import java.com.fspann.query.QueryToken;
+import com.fspann.keymanagement.KeyManager;
+import com.fspann.keymanagement.KeyVersionManager;
+import com.fspann.index.SecureLSHIndex;
+import com.fspann.query.EncryptedPoint;
+import com.fspann.query.QueryToken;
 import org.junit.jupiter.api.Test;
 
 import javax.crypto.SecretKey;
@@ -17,13 +18,14 @@ public class SecureLSHIndexTest {
     @Test
     public void testAddAndRetrieve() throws Exception {
         // Setup
-        KeyManager keyManager = new KeyManager(1000); // Initialize key manager with rotation interval
-        SecretKey currentKey = keyManager.getCurrentKey(); // Get the current key from KeyManager
+        KeyManager keyManager = new KeyManager(1000);
+        KeyVersionManager keyVersionManager = new KeyVersionManager(keyManager, 1000); // Initialize KeyVersionManager
+        SecretKey currentKey = keyVersionManager.getCurrentKey(); // Get the current key from KeyVersionManager
 
         // Provide dummy data for initial data in SecureLSHIndex constructor
         List<double[]> initialData = new ArrayList<>();
         initialData.add(new double[128]); // Adding a dummy 128-dimensional vector
-        SecureLSHIndex index = new SecureLSHIndex(128, 5, 10, currentKey, 1000, 100, initialData);
+        SecureLSHIndex index = new SecureLSHIndex(5, currentKey, initialData); // Update constructor for SecureLSHIndex
 
         // Test: Add a vector
         double[] vector = new double[128];  // Example vector
@@ -31,24 +33,25 @@ public class SecureLSHIndexTest {
         index.add(id, vector, false);
 
         // Retrieve the vector by querying
-        QueryToken queryToken = new QueryToken(List.of(1), null, 1, "epoch_" + keyManager.getTimeVersion());
+        QueryToken queryToken = new QueryToken(List.of(1), null, 1, "epoch_v" + keyVersionManager.getTimeVersion());
         List<EncryptedPoint> nearestNeighbors = index.findNearestNeighborsEncrypted(queryToken);
 
         // Assert that the vector is in the index
         assertFalse(nearestNeighbors.isEmpty(), "The vector should be retrieved.");
-        assertEquals(id, nearestNeighbors.getFirst().getPointId(), "The retrieved vector's ID should match.");
+        assertEquals(id, nearestNeighbors.get(0).getPointId(), "The retrieved vector's ID should match.");
     }
 
     @Test
     public void testRemove() throws Exception {
         // Setup
         KeyManager keyManager = new KeyManager(1000);
-        SecretKey currentKey = keyManager.getCurrentKey(); // Get the current key from KeyManager
+        KeyVersionManager keyVersionManager = new KeyVersionManager(keyManager, 1000); // Initialize KeyVersionManager
+        SecretKey currentKey = keyVersionManager.getCurrentKey(); // Get the current key from KeyVersionManager
 
         // Provide dummy data for initial data in SecureLSHIndex constructor
         List<double[]> initialData = new ArrayList<>();
         initialData.add(new double[128]); // Adding a dummy 128-dimensional vector
-        SecureLSHIndex index = new SecureLSHIndex(128, 5, 10, currentKey, 1000, 100, initialData);
+        SecureLSHIndex index = new SecureLSHIndex(5, currentKey, initialData);
 
         // Test: Add and then remove a vector
         double[] vector = new double[128];  // Example vector
@@ -59,7 +62,7 @@ public class SecureLSHIndexTest {
         index.remove(id);
 
         // Test: Try to find the removed vector
-        QueryToken queryToken = new QueryToken(List.of(1), null, 1, "epoch_" + keyManager.getTimeVersion());
+        QueryToken queryToken = new QueryToken(List.of(1), null, 1, "epoch_v" + keyVersionManager.getTimeVersion());
         List<EncryptedPoint> nearestNeighbors = index.findNearestNeighborsEncrypted(queryToken);
 
         // Assert that the vector has been removed
@@ -70,12 +73,13 @@ public class SecureLSHIndexTest {
     public void testRehash() throws Exception {
         // Setup
         KeyManager keyManager = new KeyManager(1000);
-        SecretKey currentKey = keyManager.getCurrentKey(); // Get the current key from KeyManager
+        KeyVersionManager keyVersionManager = new KeyVersionManager(keyManager, 1000); // Initialize KeyVersionManager
+        SecretKey currentKey = keyVersionManager.getCurrentKey(); // Get the current key from KeyVersionManager
 
         // Provide dummy data for initial data in SecureLSHIndex constructor
         List<double[]> initialData = new ArrayList<>();
         initialData.add(new double[128]); // Adding a dummy 128-dimensional vector
-        SecureLSHIndex index = new SecureLSHIndex(128, 5, 10, currentKey, 1000, 100, initialData);
+        SecureLSHIndex index = new SecureLSHIndex(5, currentKey, initialData);
 
         // Test: Add a vector
         double[] vector = new double[128];  // Example vector
@@ -83,14 +87,14 @@ public class SecureLSHIndexTest {
         index.add(id, vector, false);
 
         // Get the current encryption key before rehash
-        SecretKey keyBeforeRehash = keyManager.getCurrentKey();
+        SecretKey keyBeforeRehash = keyVersionManager.getCurrentKey();
 
         // Rotate keys (simulate rehashing)
-        keyManager.rotateAllKeys(null, null);
-        index.rehash(keyManager, "epoch_" + keyManager.getTimeVersion());
+        keyVersionManager.rotateKeys(); // Simulate key rotation
+        index.rehash(keyVersionManager.getKeyManager(), "epoch_v" + keyVersionManager.getTimeVersion());
 
         // Get the encryption key after rehash
-        SecretKey keyAfterRehash = keyManager.getCurrentKey();
+        SecretKey keyAfterRehash = keyVersionManager.getCurrentKey();
 
         // Assert that the key has changed after rehashing
         assertNotEquals(keyBeforeRehash, keyAfterRehash, "The key should have changed after rehashing.");
